openmolar (0.5.0-beta19-0~__DIST__0) __DIST__; urgency=low

  * New Upstream (gui pin retention for fillings)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 01 Apr 2014 15:39:42 +0100


openmolar (0.5.0-beta18-0~__DIST__0) __DIST__; urgency=low

  * New Upstream (removes pdf files from resources)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 26 Mar 2014 17:18:44 +0000


openmolar (0.5.0-beta17-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 14 Mar 2014 12:24:30 +0000


openmolar (0.5.0-beta16-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 28 Jan 2014 16:44:38 +0000


openmolar (0.5.0-beta15-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 22 Jan 2014 15:42:53 +0000


openmolar (0.5.0-beta14-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 22 Jan 2014 14:51:41 +0000


openmolar (0.5.0-beta13-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 24 Dec 2013 00:53:40 +0000


openmolar (0.5.0-beta12-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 17 Dec 2013 11:41:05 +0000


openmolar (0.5.0-beta11-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 16 Dec 2013 23:58:03 +0000


openmolar (0.5.0-beta10-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 16 Dec 2013 12:36:29 +0000


openmolar (0.5.0-beta09-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 06 Dec 2013 15:17:21 +0000


openmolar (0.5.0-beta08-0~__DIST__0) __DIST__; urgency=low

  * New Upstream

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 06 Dec 2013 12:26:23 +0000

